Valorant Html Color Fix

--- a/templates/val.html
+++ b/templates/val.html
@@ -10,10 +10,10 @@
 </head>
 {% block body %}
 <a style="margin-left:40%; margin-right:0%; font-size:250%">VALORANT CLIPS</a>
-<hr style="color:red; border-color:red">
+<hr style="color:#464646; border-color:#464646">
 <div class="container" style="margin-left:10% ;margin-right:10% ; margin-top: 0%; margin-bottom: 0%">
-    <div class="table" style="margin: 0% 0% 0%; border-color:white; border-top: 1px solid #ffffff;border-bottom:1px solid #ffffff;border-left: 1px solid #ffffff; border-right: 1px solid #ffffff; color: red">
-        <tr style="color:red">Latest Valorant Patch Notes:</tr>
+    <div class="table" style="margin: 0% 0% 0%; border-color:white; border-top: 1px solid #ffffff;border-bottom:1px solid #ffffff;border-left: 1px solid #ffffff; border-right: 1px solid #ffffff; color: #464646">
+        <tr style="color:#464646">Latest Valorant Patch Notes:</tr>
         <br>
         <a href="https://playvalorant.com/en-us/news/game-updates/valorant-patch-notes-3-07/" style="color:white">https://playvalorant.com/en-us/news/game-updates/valorant-patch-notes-3-07/</a>
     </div>
@@ -24,12 +24,12 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/c4UMkZb_6D0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col" style="margin-top: 1%; font-size: 200%">
-            <a style="color:red">*** CLIP OF THE DAY ***</a>
+            <a style="color:#464646">*** CLIP OF THE DAY ***</a>
             <br>
-            <a style="color:red">Submission of: </a>
+            <a style="color:#464646">Submission of: </a>
             <a href="https://twitter.com/dapr?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" style="color:white">@darp</a>
             <br>
-            <a style="color:red">Description: </a>
+            <a style="color:#464646">Description: </a>
             <br>
             <a style="color:white; font-size: 75%">A clip of Valorant pro player, dapr, getting knifed during a tournament match against Cloud 9 Blue.</a>
         </div>
