--- a/templates/asia.html
+++ b/templates/asia.html
@@ -12,17 +12,17 @@
         body {
             position: relative;
         }
-        #section1 {padding-top:50px;height:800px;color: #fff; background-color: #1E88E5; background-image: url("https://wallpaperaccess.com/full/447143.jpg");
+        #section1 {padding-top:50px;height:800px;color: #000000; background-color: #1E88E5; background-image: url("https://wallpaperaccess.com/full/447143.jpg");
         }
 
         h1 {
-            color: white;
+            color: black;
             text-align: center;
             font-size: xxx-large;}
-        #section2 {padding-top:50px;height:800px;color: #fff; background-color: #E6E6FA;}
-        #section3 {padding-top:50px;height:800px;color: #fff; background-color: #E6E6FA;}
-        #section4 {padding-top:50px;height:800px;color: #fff; background-color: #E6E6FA;}
-        #section5 {padding-top:50px;height:800px;color: #fff; background-color: #E6E6FA;}
+        #section2 {padding-top:50px;height:800px;color: #000000; background-color: #E6E6FA;}
+        #section3 {padding-top:50px;height:800px;color: #000000; background-color: #E6E6FA;}
+        #section4 {padding-top:50px;height:800px;color: #000000; background-color: #E6E6FA;}
+        #section5 {padding-top:50px;height:800px;color: #000000; background-color: #E6E6FA;}
 
     </style>
 </head>
@@ -66,9 +66,9 @@
     <style>
         body {
         h1 {
-            color: white;
+            color: black;
             text-align: center;
-            font-size: xx-small;}
+            font-size: x-small;}
     </style>
 </div>
 <div id="section2" class="container-fluid">
@@ -82,7 +82,7 @@
         Phuket: It has some of the best beaches in the country. Beautiful coral reefs line up the coastline,
         offering amazing opportunities for snorkeling and diving but also sea kayaking and island hopping.
 
-        <blockquote><blockquote>
+        <blockquote>
             <body>
 
             <img id="myImage" onclick="changeImage()" src="/static/assets/saumyaimages/beach.png"" width="100" height="180">
@@ -98,7 +98,6 @@
                     }
                 }
             </script>
-            <blockquote>
             </body>
 </html>
 <blockquote>
@@ -115,21 +114,10 @@
     Jaipur: Known as the "pink city" because of the unique color of the stone used to build many of the
     structures around, Jaipur is also home to a community of artisans.
     </h3></p>
-    <blockquote></blockquote>
-    <blockquote></blockquote>
 
     <blockquote>
 
         <div id="section3" class="container-fluid">
-            <blockquote>
-
-            </blockquote>
-            <blockquote>
-
-            </blockquote>
-            <blockquote>
-
-            </blockquote>
             <h1>Cuisine and Community </h1>
             <h2>Listed below are some great websites for popular cuisine: </h2>
             <a href="https://hungryoungwoman.com/food-cities-in-asia-for-the-ultimate-foodie/" >
@@ -152,7 +140,6 @@
                                 <div class="vertical-center">
                                     <button>Top 10 Countries for Asian Food!</button>
                                     <div>
-                                    </div>
 
                                     <div id="section4" class="container-fluid">
                                         <a href="#section4" >
@@ -183,12 +170,6 @@
                                                                     <button>Best Hotels to Stay in Asia</button>
                                                                 </div>
 
-                                    </div>
-                                    <div id="section4" class="container-fluid">
-                                        <a href="#section5" >
-                                            <div class="vertical-center">
-                                                <button>                  </button>
-                                            </div>
                                             <div id="section5" class="container-fluid">
                                                 <h1>Read More:</h1>
                                                 <h3>Want to learn moore about Asian heritage and history? Go to many historical sites.</h3>
