all other continents css fixes

--- a/templates/australia.html
+++ b/templates/australia.html
@@ -13,17 +13,17 @@
         body {
             position: relative;
         }
-        #section1 {padding-top:50px;height:800px;color: #fff; background-color: #1E88E5; background-image: url("https://m.media-amazon.com/images/I/81ce40Dn3jL._AC_SL1500_.jpg");
+        #section1 {padding-top:50px;height:800px;color: #000000; background-color: #000000; background-image: url("https://m.media-amazon.com/images/I/81ce40Dn3jL._AC_SL1500_.jpg");
         }
 
         h1 {
             color: white;
             text-align: center;
             font-size: xxx-large;}
-        #section2 {padding-top:50px;height:800px;color: #fff; background-color: #E6E6FA;}
-        #section3 {padding-top:50px;height:800px;color: #fff; background-color: #E6E6FA;}
-        #section4 {padding-top:50px;height:800px;color: #fff; background-color: #E6E6FA;}
-        #section5 {padding-top:50px;height:800px;color: #fff; background-color: #E6E6FA;}
+        #section2 {padding-top:50px;height:800px;color: #000000; background-color: #E6E6FA;}
+        #section3 {padding-top:50px;height:800px;color: #000000; background-color: #E6E6FA;}
+        #section4 {padding-top:50px;height:800px;color: #000000; background-color: #E6E6FA;}
+        #section5 {padding-top:50px;height:800px;color: #000000; background-color: #E6E6FA;}
 
     </style>
 </head>
@@ -67,7 +67,7 @@
     <style>
         body {
         h1 {
-            color: white;
+            color: black;
             text-align: center;
             font-size: xx-small;}
     </style>
@@ -123,15 +123,6 @@
     <blockquote>
 
         <div id="section3" class="container-fluid">
-            <blockquote>
-
-            </blockquote>
-            <blockquote>
-
-            </blockquote>
-            <blockquote>
-
-            </blockquote>
             <h1>Cuisine and Community </h1>
             <h2>Listed below are some great websites for popular cuisine: </h2>
             <a href="https://www.australia.com/en/things-to-do/food-and-drinks/best-restaurants-in-australia.html" >
@@ -159,7 +150,6 @@
                                 <div id="section4" class="container-fluid">
                                     <a href="#section4" >
                                         <div class="vertical-center">
-                                            <button>                  </button>
                                         </div>
                                         <h1>Accommodations</h1>
                                         <h3>Below are some great websites to research for living accommodations across the African continent!</h3>
@@ -185,13 +175,7 @@
                                                                 <button>Best Hotels to Stay in Australia</button>
                                                             </div>
 
-                                </div>
-                                <div id="section4" class="container-fluid">
                                     <a href="#section5" >
-                                        <div class="vertical-center">
-                                            <button>                  </button>
-                                        </div>
-                                        <div id="section5" class="container-fluid">
                                             <h1>Read More:</h1>
                                             <h3>Want to learn moore about African heritage and history? Go to many historical sites.</h3>
                                             <a href="https://theculturetrip.com/pacific/australia/articles/11-historical-sites-to-see-in-australia/" >
