--- a/templates/africa.html
+++ b/templates/africa.html
@@ -83,15 +83,6 @@
 </blockquote>
 
 <div id="section2" class="container-fluid">
-    <blockquote>
-
-    </blockquote>
-    <blockquote>
-
-    </blockquote>
-    <blockquote>
-
-    </blockquote>
     <h1>Notable Locations</h1>
         What are some notable locations in Africa? Well, given that there are so many countries, here is a brief rundown.
     <h3><p class="text-left">Zanzibar, known for its beautiful beaches, is a fantastic place to visit in
@@ -123,21 +114,10 @@
         visit.
         Luxor is a staple because while in Egypt, it is still very much so connected to Africa, and is never
         overlooked. It has historical precedent and is always a fun visit.</h3></p>
-    <blockquote></blockquote>
-    <blockquote></blockquote>
 
     <blockquote>
 
     <div id="section3" class="container-fluid">
-        <blockquote>
-
-        </blockquote>
-        <blockquote>
-
-        </blockquote>
-        <blockquote>
-
-        </blockquote>
     <h1>Cuisine and Community </h1>
         <h2>Listed below are some great websites for popular cuisine: </h2>
         <a href="https://www.tasteatlas.com/100-most-popular-foods-in-africa" >
@@ -161,41 +141,12 @@
                                 <button>Top African Restaurants!</button>
                             </div>
                             <div>
-
-                                <blockquote>
-
-                                </blockquote>
-                                <blockquote>
-
-                                </blockquote>
-                                <blockquote>
-
-                                </blockquote>
-                                <blockquote>
-
-                                </blockquote>
-                                <blockquote>
-
-                                </blockquote>
-                                <blockquote>
-
-                                </blockquote>
-          </div>
                         <div>
 
 
                         </div>
 
 <div id="section4" class="container-fluid">
-    <blockquote>
-
-    </blockquote>
-    <blockquote>
-
-    </blockquote>
-    <blockquote>
-
-    </blockquote>
     <a href="#section4" >
         <div class="vertical-center">
             <button>                  </button>
@@ -222,20 +173,10 @@
                     <a href="https://www.thetravel.com/best-hotels-africa/" >
                         <div class="vertical-center">
                             <button>10 of the Best Living Accommodations in Africa</button>
-                        </div>
 
-</div>
-                            <div id="section4" class="container-fluid">
-                                <a href="#section5" >
-                                    <div class="vertical-center">
-                                        <button>                  </button>
-                                    </div>
 <div id="section5" class="container-fluid">
-    <blockquote>
-
-    </blockquote>
     <h1>Read More:</h1>
-    <h3>Want to learn moore about African heritage and history? Go to many historical sites.</h3>
+    <h3>Want to learn more about African heritage and history? Go to many historical sites.</h3>
     <a href="https://www.travelawaits.com/2563263/historical-sites-africa/" >
         <div class="vertical-center">
             <button>8 Amazing Historical Sites To Experience In Africa</button>
