--- a/templates/antarctica.html
+++ b/templates/antarctica.html
@@ -104,9 +104,9 @@
                         document.getElementById("heading").style.background = color;
                     }
                 </script>
-                <button type="button" onclick="changeBodyBg('yellow');">Yellow</button>
-                <button type="button" onclick="changeBodyBg('lime');">Lime</button>
-                <button type="button" onclick="changeBodyBg('orange');">Orange</button>
+                <button type="button" onclick="changeBodyBg('purple');">Purple</button>
+                <button type="button" onclick="changeBodyBg('green');">Green</button>
+                <button type="button" onclick="changeBodyBg('teal');">Teal</button>
 
                 <h1>Cuisine and Community </h1>
                 <h2>Listed below are some great websites for popular cuisine: </h2>
