--- a/templates/logicgates.html
+++ b/templates/logicgates.html
@@ -1,37 +1,19 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Change the Background Color with JavaScript</title>
+    <meta charset="utf-8" />
+    <title>JavaScript change background image</title>
     <script>
-        // Function to change webpage background color
-        function changeBodyBg(color){
-            document.body.style.background = color;
-        }
-
-        // Function to change heading background color
-        function changeHeadingBg(color){
-            document.getElementById("heading").style.background = color;
+        // The function below will change the background image
+        function changeBackgroundImage() {
+            document.body.style.backgroundImage = "url('/static/assets/japan.png')";
+            document.body.style.backgroundRepeat = "no-repeat";
+            document.body.style.backgroundSize = "cover";
         }
     </script>
 </head>
 <body>
-<h1 id="heading">This is a heading</h1>
-<p>This is a paragraph of text.</p>
-<hr>
-<div>
-    <label>Change Webpage Background To:</label>
-    <button type="button" onclick="changeBodyBg('yellow');">Yellow</button>
-    <button type="button" onclick="changeBodyBg('lime');">Lime</button>
-    <button type="button" onclick="changeBodyBg('orange');">Orange</button>
-</div>
-<br>
-<div>
-    <label>Change Heading Background To:</label>
-    <button type="button" onclick="changeHeadingBg('red');">Red</button>
-    <button type="button" onclick="changeHeadingBg('green');">Green</button>
-    <button type="button" onclick="changeHeadingBg('blue');">Blue</button>
-</div>
+<h1>Click the button to change the background image:</h1>
+<button onclick="changeBackgroundImage();">Change</button>
 </body>
 </html>
