--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
 
             p {
                 color: black;
-                font-family: "Arial Rounded MT Bold";
+                font-family: "Elephant";
                 font-size: 35px;
                 text-align: center;
 
@@ -32,7 +32,7 @@
 
     <h1>All Around The World</h1>
     <p>Welcome to the All Around the World Home Page!</p>
-        <img src="https://bestanimations.com/media/tiny-earth/700959513earth-spinning-rotating-animation-58.gif" alt="giffin"
+{#        <img src="https://bestanimations.com/media/tiny-earth/700959513earth-spinning-rotating-animation-58.gif" alt="giffin"#}
 
 
     <html xmlns="http://www.w3.org/1999/html"
@@ -49,7 +49,7 @@
 
             p {
                 color: black;
-                font-family: "Arial Rounded MT Bold";
+                font-family: "Bellefaire";
                 font-size: 35px;
                 text-align: center;
 
@@ -57,6 +57,22 @@
         </style>
     </head>
     <body>
+    <!DOCTYPE html>
+    <html>
+    <body>
+
+    <p>Click the button to display an alert box.</p>
+
+    <button onclick="myFunction()">Click me!</button>
+
+    <script>
+        function myFunction() {
+            alert("Welcome to our site.");
+        }
+    </script>
+
+    </body>
+    </html>
 
     </blockquote>
     <a href="http://127.0.0.1:5000/about/">
