Navbar dropdown fix

--- a/templates/controllers.html
+++ b/templates/controllers.html
@@ -11,6 +11,7 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
 <body style="background-color: lightcoral">
+<h1 class="text-center" style="color:black">Controllers</h1>
 <div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox;>
     <iframe width="1920" height="1080">
 </iframe><br />
