--- a/templates/sentinels.html
+++ b/templates/sentinels.html
@@ -12,6 +12,7 @@
 </head>
 {% block body %}
 <body style="background-color: lightcoral">
+<h1 class="text-center" style="color:black">Sentinels</h1>
 <div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox;>
     <iframe width="1920" height="1080">
 </iframe><br />
