--- a/templates/initiators.html
+++ b/templates/initiators.html
@@ -8,6 +8,7 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <body style="background-color:  lightcoral">
+    <h1 class="text-center" style="color:black">Initiators</h1>
     <div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox;>
     <iframe width="1920" height="1080">
     </iframe><br />
