--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,15 @@
 {% set project = "About" %}
 
 {% block body %}
+
+    <script>
+    // The function below will change the background image
+    function changeBackgroundImage() {
+    document.body.style.backgroundImage = "url('/static/assets/japan.png')";
+    document.body.style.backgroundRepeat = "no-repeat";
+    document.body.style.backgroundSize = "cover";
+    }
+    </script>
     <html>
     <head>
         <style>
@@ -28,6 +37,8 @@
 
     <h1>About Us</h1>
     <p></p> We are a group of high school students from Del Norte high school who have a passion for coding and designing websites.<p/>
+    <h1>Click the button to change the background image:</h1>
+    <button onclick="changeBackgroundImage();">Change</button>
 
     <br />
 
