push journal embed on greet page

--- a/templates/rohan.html
+++ b/templates/rohan.html
@@ -23,7 +23,7 @@
             <iframe
                     width="1000"
                     height="500"
-                    src=""
+                    src="https://docs.google.com/document/d/1caGFdefkHrh74c3f_iuIx26mDD3QnP0FDM9cpS8BYFM/edit?usp=sharing"
             ></iframe>
         </p>
     </div>
