jason background and journal

--- a/templates/jason.html
+++ b/templates/jason.html
@@ -6,7 +6,15 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here ->
-    <p> </p>
+    </div>
+    <p align="center">
+        <iframe
+                width="1000"
+                height="500"
+                src="https://docs.google.com/document/d/1caGFdefkHrh74c3f_iuIx26mDD3QnP0FDM9cpS8BYFM/edit?usp=sharing"
+        ></iframe>
+    </p>
+    </div>
 {% endblock %}
 
 
