--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,8 +7,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <!DOCTYPE HTML>
 <html lang="en">
 
-{% set basename = "Nighthawk Coding" %}
-{% set github = "https://github.com/nighthawkcoders" %}
+{% set basename = "Supporting Cast" %}
+{% set github = "https://github.com/RohanG326/supporting_cast" %}
 {% set twitter = "https://twitter.com/NighthawkCoding" %}
 {% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
 
