--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -17,9 +17,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         :root{
-            --white: whitesmoke;
-            --black: black;
-            --grey: grey;
+            --white: #fed2b9;
+            --black: #ceb680;
+            --grey: #64483f;
         }
 
         html, body{
@@ -95,6 +95,15 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         .row{
             margin: auto;
         }
+        .sidenav {
+            height: 100%;
+            top: 7.75%;
+            width: 200px;
+            position: fixed;
+            background-color: #1da1f2;
+            overflow-x: hidden;
+            padding-top: 20px;
+        }
 
     </style>
 
@@ -106,6 +115,10 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% include "layouts/navbar.html" %}
 
 {% block body %}
+    <div class="sidenav">
+        <p>this is working :D</p>
+    </div>
+
 <div class="container-fluid">
     <div class="row justify-content-end" style="padding: 2%;">
         <div class="col-2" style="text-align: right;">
@@ -146,21 +159,6 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
 </body>
 
-{% block background %}
-    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.birds.min.js') }}"></script>
-    <script>
-        VANTA.BIRDS({
-            el: "body",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            scale: 1.00,
-            scaleMobile: 1.00
-        })
-    </script>
-{% endblock %}
+
 
 </html>
