--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -12,18 +12,11 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
         <div class="navbar-nav">
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
             <a class="nav-link" href={{ url_for('home') }}>Home</a>
-{#            <a class="nav-link" href={{ url_for('binary') }}>Binary</a>#}
-{#            <a class="nav-link" href={{ url_for('addition') }}>Addition</a>#}
-{#            <a class="nav-link" href={{ url_for('signed') }}>Signed</a>#}
-            <a class="nav-link" href={{ url_for('about') }}>About</a>
-{#            <a class="nav-link" href={{ url_for('covid') }}>Covid</a>#}
             <a class="nav-link" href={{ url_for('timezoneapi') }}>Current Weather Data/Timezone API</a>
             <a class="nav-link" href={{ url_for('newapi') }}>Historical Weather API</a>
-            <a class="nav-link" href={{ url_for('insights') }}>Insights</a>
-{#            <a class="nav-link" href={{ url_for('sevenwonders') }}>7 Wonders of the World</a>#}
+            <a class="nav-link" href={{ url_for('sonakshi') }}>Sonakshi</a>
             <a class="nav-link" href="/stub">Stub</a>
-            {#            <a class="nav-link" href={{ url_for('color') }}>Color Codes</a>#}
-{#            <a class="nav-link" href={{ url_for('logicgates') }}>Logic Gates</a>#}
+
 
 
 
