--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -15,6 +15,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="/static/assets/foodlogo.png">
     <style>
         :root{
             --white: whitesmoke;
