--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,20 +1,113 @@
-<!-- Navigation Bar from bootstrap
-This HTML is setup as a fragment allowing it to be "included" by other HTML files via Jinja2
--->
+<!DOCTYPE html>
+<html>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous">
+
+    </script>
+    <style>
+        body { height: 100vh; }
+        * { cursor: url(/static/turdle.cur) 0 0, default; }
+    </style>
+    <link rel="shortcut icon" href="/static/assets/tort.ico">
+
+</head>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="https://csp.nighthawkcodingsociety.com/">{{basename}}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+
+    <a class="navbar-brand" href="/">
+        <img src="/static/improvedtordle.png" width="76" height="50" class="center" alt="">
         <span class="navbar-toggler-icon"></span>
-    </button>
+    </a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav mr-auto">
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
-            <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
-            <a class="nav-link" href={{ url_for('kangaroos') }}>Kangaroos</a>
-            <a class="nav-link" href={{ url_for('walruses') }}>Walruses</a>
-            <a class="nav-link" href={{ url_for('hawkers') }}>Hawkers</a>
-            <!-- stub is shown using the name of the route -->
-            <a class="nav-link" href="/stub">Stub</a>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    About Pages
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/tanay">Tanay </a>®
+                </div>
+            </li>
+
+
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Nathan
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/ngreet">Mini Lab</a>
+                    <a class="dropdown-item" href="https://docs.google.com/document/d/1mpSTPoxFycOyKC40fRmoi1WsmJexhgYlY1nKJLu3yh0/edit">Video Notes</a>
+                    <a class="dropdown-item" href="/nabout">About Nathan</a>
+                </div>
+            </li>
+
+
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Colin
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/cgreet">Mini Lab</a>
+                    <a class="dropdown-item" href="https://docs.google.com/document/d/1wpuYBTp1CUIIosRJWoNKpJEOn8X3EbprnMGlf24Rjkw/edit?usp=sharing">Video Notes</a>
+                    <a class="dropdown-item" href="/cabout">About Colin</a>
+                </div>
+            </li>
+
+
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Everitt
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/egreet">Mini Lab</a>
+                    <a class="dropdown-item" href="https://docs.google.com/document/d/1daZ_8eHmGquddiJmqGEpUVh2x08iiIuxZk-UYRzNojo/edit?usp=sharing">Video Notes</a>
+                    <a class="dropdown-item" href="/eabout">About Everitt</a>
+                </div>
+            </li>
+
+
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Jackson
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/jgreet">Mini Lab</a>
+                    <a class="dropdown-item" href="https://docs.google.com/document/d/1OfpTCseSqM57-1gCiBApLrFuTqxmW7MQxsBs5ljFsY4/edit?usp=sharing">Video Notes</a>
+                    <a class="dropdown-item" href="/jabout">About Jackson</a>
+                </div>
+            </li>
+
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Mini-Labs
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/unsignedaddition">Signed and Unsigned Addition</a>
+                    <a class="dropdown-item" href="/binary">Binary Clicker</a>
+                    <a class="dropdown-item" href="/colorcode">Color Codes</a>
+                    <a class="dropdown-item" href="/greet">Mini-Lab1(Greet page)</a>
+                    <a class="dropdown-item" href=/rgb>RGB</a>
+                    <a class="dropdown-item" href=/logicgates>Logic Gates</a>
+                    <a class="dropdown-item" href="https://docs.google.com/document/d/1tz7A3Lp6vaa3a2ihFki3gpXrv0AbuLO8AQ0fRD_HylU/edit">Brain Write</a>
+                    <a class="dropdown-item" href="https://docs.google.com/drawings/d/1mLX47ycMErdh59YrlnN0HBTh9hMyTQiEKBE57kt6F_Y/edit">WireFrame</a>
+                    <a class="dropdown-item" href="https://www.loom.com/share/18e1d69820c94d1c984c99982b04e734">Video Journal 0</a>
+                </div>
+            </li>
         </div>
+
     </div>
 </nav>
+
+</div>
+</div>
+</div>
+</html>
