--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -9,11 +9,23 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
+
+            <ul class="navbar-nav mr-auto">
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        About Us
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">                        <a class="dropdown-item" href="/">Evan</a>
+                        <a class="dropdown-item" href="/">Leah</a>
+                        <a class="dropdown-item" href="/">Vunsh</a>
+                        <a class="dropdown-item" href="/">Sanjay</a>
+                        <a class="dropdown-item" href="/">Simon</a>
+                    </div>
+                </li>
+            </ul>
+
             <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
-            <a class="nav-link" href={{ url_for('kangaroos') }}>Kangaroos</a>
-            <a class="nav-link" href={{ url_for('walruses') }}>Walruses</a>
-            <a class="nav-link" href={{ url_for('hawkers') }}>Hawkers</a>
-            <!-- stub is shown using the name of the route -->
             <a class="nav-link" href="/stub">Stub</a>
         </div>
     </div>
