--- a/templates/sonakshi.html
+++ b/templates/sonakshi.html
@@ -24,12 +24,23 @@
                 text-align: center;
                 font-size: 20px;
             }
+
+
         </style>
 
     </head>
 
     <h1>Sonakshi</h1>
     <p> Hi! My name is Sonakshi. I am 16 years old and a senior at Del Norte High School. I love to play tennis and enjoy going to the beach. </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2">
+    <a href="https://github.com/sonakshibhalla/tri2turtles">Link to Github</a>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2">
+    <a href="https://github.com/sonakshibhalla/tri2turtles">Link to Journal</a>
 
     <body>
 
