--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -2,7 +2,7 @@
 This HTML is setup as a fragment allowing it to be "included" by other HTML files via Jinja2
 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="https://csp.nighthawkcodingsociety.com/">{{basename}}</a>
+    <a class="navbar-brand" href="/">{{basename}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,7 +16,8 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         About Us
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">                        <a class="dropdown-item" href="/">Evan</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/">Evan</a>
                         <a class="dropdown-item" href="/">Leah</a>
                         <a class="dropdown-item" href="/">Vunsh</a>
                         <a class="dropdown-item" href="/">Sanjay</a>
@@ -25,7 +26,6 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 </li>
             </ul>
 
-            <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
             <a class="nav-link" href="/stub">Stub</a>
         </div>
     </div>
