--- a/templates/evan.html
+++ b/templates/evan.html
@@ -1,8 +1,7 @@
-<!-- Extending the predefined project layout -->
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Leah" %}
+{% set project = "evan" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
