--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -17,6 +17,9 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                         About Us
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/evan/">Evan</a>
+                        <a class="dropdown-item" href="/leah/">Leah</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/">Evan</a>
                         <a class="dropdown-item" href="/">Leah</a>
                         <a class="dropdown-item" href="/">Vunsh</a>
@@ -26,8 +29,10 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 </li>
             </ul>
 
+            <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
             <a class="nav-link" href="/stub">Stub</a>
         </div>
     </div>
 </nav>
+
 
