--- a/templates/genius.html
+++ b/templates/genius.html
@@ -16,7 +16,7 @@
         <!-- Title -->
         <div class="col-12" style="text-align: center;">
             <h1><strong>Flight RESTapi from rapidapi.com</strong></h1>
-            <form action={{url_for('flightdata')}}>
+            <form action={{url_for('f')}}>
                 <button>Refresh!</button>
             </form>
         </div>
