--- a/templates/newapi.html
+++ b/templates/newapi.html
@@ -16,28 +16,11 @@
         <!-- Title -->
         <div class="col-12" style="text-align: center;">
             <h1><strong>Historical Weather Data from rapidapi.com</strong></h1>
-            <form action={{url_for('timezoneapi')}}>
-                <button>Refresh!</button>
+            <a href="{{url_for('newapi')}}" class="button1">Refresh!</a>
             </form>
         </div>
 
-        {#        <div class="col-12">#}
-        {#            <p>Hello, {{places}}!</p>#}
-        {#        </div>#}
-        {#        <div class="col-12">#}
-        {#            <p>Hello, {{name}}!</p>#}
-        {#        </div>#}
-        {##}
-        {#        <div class="col-12">#}
-        {#            <form action="/flightapi" id="greet" method="POST" >#}
-        {#                <label for="name">Type a greeting name?</label>#}
-        {#                <input name="name" id="name">#}
-        {#                <input type="submit" value="Greetings!">#}
-        {#            </form>#}
-        {#        </div>#}
 
-        {#        <p>{{ stats.Places }}</p>#}
-        <!-- Sequence -->
         <div class="col-20" style="text-align: left; ">
             <table class="table">
                 <tbody>
